Removed .gitignore, changed README.md and fixed some layout issues on mobile devices

--- a/include/css/dark.css
+++ b/include/css/dark.css
@@ -26,6 +26,16 @@ h1, h2, a, span, input, textarea, select, option
 	color: white;
 }
 
+a:hover
+{
+	color: #cccccc !important;
+}
+
+a:active
+{
+	color: #888888 !important;
+}
+
 p, b, label
 {
 	color: #cccccc;
